<resources>
    <string name="app_name">行歌</string>
    <string name="digits">.-_0123456789@abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_user">-_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="account_unnormal">账号存在风险，请重新登录！</string>
    <string name="login">登录</string>
    <string name="search">搜索</string>
    <string name="add">增加</string>
    <string name="contact">通讯录</string>
    <string name="account_hint">账号/手机号/邮箱</string>
    <string name="account_user_hint">请输入用户名</string>
    <string name="account_register_hint">请输入手机号或邮箱</string>
    <string name="password_hint">密码</string>
    <string name="password_again_hint">确认密码</string>
    <string name="register">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="find_password">重置密码</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_fail">用户账号或密码错误，请重试</string>
    <string name="register_samecode">注册失败，已存在此用户名</string>
    <string name="register_samephone">注册失败，已存在此手机号</string>
    <string name="register_sameemial">注册失败，已存在此邮箱</string>
    <string name="register_fail">注册失败，请重试</string>
    <string name="network_not_available">网络连接不可用</string>
    <string name="connect_wrong">连接服务器失败，请稍后再试</string>
    <string name="waiting">请稍候…</string>
    <string name="map">行</string>
    <string name="chat">撩</string>
    <string name="moment">歌</string>
    <string name="me">窝</string>
    <string name="map_title">地图</string>
    <string name="chat_title">消息</string>
    <string name="map_network">地图网络错误</string>
    <string name="map_permission">地图权限错误</string>
    <string name="map_key">地图app_key验证错误</string>
    <string name="map_type_nomal">2D平面图</string>
    <string name="map_type_sallite">卫星图</string>
    <string name="map_type_none">空白图</string>
    <string name="map_layer_traffic">交通图</string>
    <string name="map_layer_heat">热力图</string>
    <string name="chat_group_chat">发起群聊</string>
    <string name="chat_add_contacts">添加朋友</string>
    <string name="chat_scan_qrcode">扫一扫</string>
    <string name="chat_money">收付款</string>
</resources>
